(fix): marketing points colours in dark mode

--- a/src/app/common/components/marketing/styles/style-2.scss
+++ b/src/app/common/components/marketing/styles/style-2.scss
@@ -79,6 +79,9 @@
         @include m-theme() {
           color: themed($m-grey-300);
         }
+        @include m-on-theme(dark) {
+          color: #b7b7b7;
+        }
       }
     }
 
